<resources>
    <string name="app_name">MusicalApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_main_register">Sign in</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_search">Search</string>
    <string name="nav_title_my_music">My music</string>
    <string name="nav_tracks">Tracks</string>
    <string name="nav_albums">Albums</string>
    <string name="nav_artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="now_playing_name">Now Playing</string>
    <string name="playlist_name">Playlist</string>
    <string name="collection_name">Collection</string>
    <string name="search_name">Search</string>
    <string name="popular_name">Popular</string>
    <string name="settings">Settings</string>
    <string name="sign_in_name">Sign In</string>
    <string name="btn_now_playing">Now Playing</string>
    <string name="btn_playlist">Playlist</string>
    <string name="btn_collection">Collection</string>
    <string name="collection_description">
        This activity\'s content depends on the JSON transferred by the server.
        It usually contains list of particular playlists.
        The song which is playing now is displayed in the toolbar.
        I will use the Google gson library to parse JSON files from my server.
        I will process the audio files with Android Multimedia Framework.
        I will use two major classes in that framework: the MediaPlayer (the primary API for playing sound and video) and AudioManager (the audio source and output manager).
        I will download covers for albums by the Squareup\’s Picasso library.
        I will use the Toolbar widget to create a panel for showing info about the playing track and controls.
    </string>
    <string name="playlist_description">
        This activity\'s content depends on the metadata transferred by the parent activity.
        It usually shows the album picture and list of tracks located in the playlist (the album).
        The song which is playing now is displayed in the fragment at the bottom.
        I will use the Google gson library to parse JSON files from my server.
        I will process the audio files with Android Multimedia Framework.
        I will use two major classes in that framework: the MediaPlayer (the primary API for playing sound and video) and AudioManager (the audio source and output manager).
        I will download covers for albums by the Squareup\’s Picasso library.
        I will use the Toolbar widget to create a panel for showing info about the playing track and controls.
    </string>
    <string name="now_playing_description">
        This activity show to user label of the album, the song\'s info and controls.
        The streaming of the music will be managed with Android multimedia framework API.
        I will use the Google gson library to parse JSON files from my server.
        I will process the audio files with Android Multimedia Framework.
        I will use two major classes in that framework: the MediaPlayer (the primary API for playing sound and video) and AudioManager (the audio source and output manager).
        I will download covers for albums by the Squareup\’s Picasso library.
        I will use the Toolbar widget to create a panel for showing info about the playing track and controls.
    </string>
    <string name="popular_description">
        This activity contains the most popular songs, collections and artists among the user\'s friends.
        The song which is playing now is displayed in the fragment at the bottom.
        I will use the Google gson library to parse JSON files from my server.
        I will process the audio files with Android Multimedia Framework.
        I will use two major classes in that framework: the MediaPlayer (the primary API for playing sound and video) and AudioManager (the audio source and output manager).
        I will download covers for albums by the Squareup\’s Picasso library.
        I will use the Toolbar widget to create a panel for showing info about the playing track and controls.
    </string>
    <string name="search_description">
        This activity contains all audio resources that match the user\'s request. Need to attach the json reader and to build the server with API.
        I will use the Google gson library to parse JSON files from my server.
        I will process the audio files with Android Multimedia Framework.
        I will use two major classes in that framework: the MediaPlayer (the primary API for playing sound and video) and AudioManager (the audio source and output manager).
        I will download covers for albums by the Squareup\’s Picasso library.
        I will use the Toolbar widget to create a panel for showing info about the playing track and controls.
    </string>
</resources>
