<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sbkubric.android.musicalstructureapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_description" />

    <Button
        android:id="@+id/btn_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_now_playing" />

    <Button
        android:id="@+id/btn_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_playlist" />

    <Button
        android:id="@+id/btn_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_collection" />

</LinearLayout>
